# ChangeLog for dev-ruby/bunny
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/bunny/ChangeLog,v 1.31 2014/06/23 05:45:06 graaff Exp $

*bunny-1.3.1 (23 Jun 2014)

  23 Jun 2014; Hans de Graaff <graaff@gentoo.org> +bunny-1.3.1.ebuild:
  Version bump.

  23 Jun 2014; Hans de Graaff <graaff@gentoo.org> -bunny-1.1.2.ebuild,
  -bunny-1.1.3.ebuild, -bunny-1.1.9.ebuild:
  Cleanup.

*bunny-1.2.2 (29 May 2014)

  29 May 2014; Hans de Graaff <graaff@gentoo.org> +bunny-1.2.2.ebuild:
  Version bump.

  26 May 2014; Manuel Rüger <mrueg@gentoo.org> bunny-1.1.2.ebuild,
  bunny-1.1.3.ebuild:
  Remove ruby18 target.

*bunny-1.2.1 (16 May 2014)

  16 May 2014; Hans de Graaff <graaff@gentoo.org> +bunny-1.2.1.ebuild:
  Version bump.

*bunny-1.1.9 (02 May 2014)

  02 May 2014; Hans de Graaff <graaff@gentoo.org> +bunny-1.1.9.ebuild:
  Version bump.

  07 Mar 2014; Manuel Rüger <mrueg@gentoo.org> -bunny-0.6.0-r1.ebuild,
  -bunny-1.0.7.ebuild:
  Cleanup old.

*bunny-1.1.3 (17 Feb 2014)

  17 Feb 2014; Hans de Graaff <graaff@gentoo.org> +bunny-1.1.3.ebuild:
  Version bump.

  17 Feb 2014; Hans de Graaff <graaff@gentoo.org> -bunny-1.0.0.ebuild,
  -bunny-1.0.5.ebuild, -bunny-1.1.0.ebuild:
  Cleanup.

*bunny-1.1.2 (05 Feb 2014)

  05 Feb 2014; Hans de Graaff <graaff@gentoo.org> +bunny-1.1.2.ebuild:
  Version bump.

*bunny-1.1.0 (19 Jan 2014)

  19 Jan 2014; Hans de Graaff <graaff@gentoo.org> +bunny-1.1.0.ebuild:
  Version bump.

*bunny-1.0.7 (25 Dec 2013)

  25 Dec 2013; Hans de Graaff <graaff@gentoo.org> +bunny-1.0.7.ebuild:
  Version bump.

  25 Dec 2013; Hans de Graaff <graaff@gentoo.org> -bunny-0.7.9.ebuild,
  -bunny-0.8.0.ebuild:
  Cleanup.

*bunny-1.0.5 (05 Dec 2013)

  05 Dec 2013; Hans de Graaff <graaff@gentoo.org> +bunny-1.0.5.ebuild:
  Version bump.

*bunny-1.0.0 (06 Nov 2013)

  06 Nov 2013; Hans de Graaff <graaff@gentoo.org> +bunny-1.0.0.ebuild:
  Version bump.
