@@ -4,15 +4,17 @@ Hash: SHA256
 DIST bunny-1.2.1.gem 174080 SHA256 29ad6c80b1eb9094580369e37c517fbcd31aa5dc6d5ad95b3ccdaf1f49332c8e SHA512 c30da8a67207c81d8363d724aae39d2798a72a90b3f11fb4ac31abf9be88ebf1c43ce895552b2af74aece91713a1a53a9e0fdd736ddbdea7ab525211c6130bdb WHIRLPOOL abd17b36597088e8acc053c450fd87016f745407514ff2c63c7e3d831f5b1b6ce811f7b326fc7bccece2d669d88741b0b8eaa5c2e0f33a4dcfb2226050fc4640
 DIST bunny-1.2.2.gem 174080 SHA256 11e5522ccab1fa6942987da68bd52d19c522846f53f7c7fd8e6c0ecd16bd639a SHA512 7a71be87e90f5d1be448f908af1eabcf89e56b7ae94ebe26c9209e3c5ff7f457c93b483a18aa92b1f1592946977d362e3e307615c325e1ba95353a5eb855cc4f WHIRLPOOL 5f58dea99bcd4734771fa4caaa23a184e8c63894d0806b5e0dafd93befd87ae5f10436ceae913bf9af36e90ae63a5400f1106d627bef575ed42f45c702ddc9c1
 DIST bunny-1.3.1.gem 175104 SHA256 542e1c928d2d0d1fa3f5eecca624e91ea97edbc9c5579535a30e014dfb1ca4a4 SHA512 7eff120914db6e85abcea9b13b9c03ff7a9c46913d2f6f1cadfb5538a8c222bf294426345de4e6290d5b11e4f30be6e8b3f5f07a7f7a5f16dfda4fc89a35118f WHIRLPOOL afaa944155a7f99d3611cd47a53884081afcc892e69cfe68dfc9050c82411e652197709b9d82b816f349e76ff32040fa0088e8a8097a31fce807e2134497fa09
+DIST bunny-1.4.0.gem 175616 SHA256 7f66ac3e05ccc8769e29edb0de2ef1e774cdd954be0309f687496f408740cd22 SHA512 74f4f6660f3e34ca9cc20709432074e900791d3cfe4d9f769237b82ca1f55d294d63fce8b6d0abe594e4b4fb7b1f9534046c885ea50b9a34104ef655bd550e2e WHIRLPOOL b3f6324f0e7de23ac6837fd694be721f7418fb01e40754d8a37665507a3bc8ef754dba6509985059b471901474aad9bdff8b75476db3f073c02b12ec375bc2a2
 EBUILD bunny-1.2.1.ebuild 716 SHA256 3eb21e933faa5cf9d79c4466c51084f273f4fe9ea4c6b5c911fbf330ddc95b7d SHA512 293081deb8528a2da9cfeea92b125c5c5cfcb8853b73a613d0ece6fcc2d67f5fe1f8f6e61844a6e490951a5272db76d13e500a80885c33658ff9a0ebae53a8c2 WHIRLPOOL 95d267c30c64410fa3ed435bf1242790e753b05139c1a7e09be5499cd051b56a3462ab710b18eb0e67c2074543b8746de9fdb4ece3860832af9ad1fa59121b76
 EBUILD bunny-1.2.2.ebuild 716 SHA256 df956535c1bcc6ced4c4d7abd799143b13b09d6fe064c863f78b7e3b32c9232d SHA512 7ec1be2f5e2ce5cfb48bcdca82af84dde792ccabfa876373d1a89334e5dbddea4c287595147a81adc2e5c15f07f992d67defb78069c587731fd3acfe3b8e6e7d WHIRLPOOL 6e8d24401ca24c7ee034828eda307582200f4b7616bceea24fc07e7a1d6e76dc96ce07666cda008a6a0706e230ea680ba4d26b6754359061af39b046d08a7716
 EBUILD bunny-1.3.1.ebuild 716 SHA256 e2fd71c79348b01668a1302abe19d68fa027aae7a12571eddde0810df4031bd1 SHA512 b0fdc7aa49fe4eecac4b5333d7229a25580571a4f44bc2a2ad2f224f27995954675107808946f8f28def111a535cdda7440d7453c684e591b45ed923fd290059 WHIRLPOOL 1c4f57d21d332fc59f8afb5cf9cdd5236c252f6261da475d1084bb29d69661b15608bab576ce2708605811f7bd8e99c9d7e4a3e6e56ff9b098ef89d91cf78756
-MISC ChangeLog 3911 SHA256 a31c0d9a89ef0aa79b16ddcebc429f21d5cf6862db76a057d8a415dff35eaf2f SHA512 a0e0e6874f0c49ae6ec2b973b710fe4305c724aad8fe8ec4c897512eca8b72b75caa5d8632e87b481c06cdfc768d1dd306f06add62c86cd9e0d52236c63ff76e WHIRLPOOL 323039b3387a1b00b6cc52cd38f068137a1f5c3ac3f008a992dbc7bb3412d1fcc3e91ba5c6b9bf81277b6f16479a72ad4b6afc77072478de45c33a6023812f4e
+EBUILD bunny-1.4.0.ebuild 716 SHA256 720e8483359a2afa603f2b84b7040c589d532982f262c90711635b30e2edb176 SHA512 bec197e3a5ed123be145dae9e410e7ebcc4ece25d28eb270a8bf5d55ddefbc1649ddbf6f106a9064c4232ac067022819693ade50638bdfb1b83881d221bba099 WHIRLPOOL bb483c72febc86d0c911d301f62c551bbb6e21a7cdce8fbe45b140005a91d25e9f831d01c4f759195baa788a0ecd0760ee7cf5843d822e32426ed3a6a7150a90
+MISC ChangeLog 4027 SHA256 03f554e3e1b727a13bb10f2e0a396791afac491f62c5eed0816d289fd8f19bc3 SHA512 b82a9f3fed8a5944e166109952cd72a7c8c4050a21e0ee1e071e1d35417c854330e3c3aa129dbf3738e52a64a41b05caf40b4a1e6c97b9ac4f0229341fcdff57 WHIRLPOOL 0423a986cdd2bd353bcaf53d89b0fa16db09eac673b62a4343cdb242988a22cbd241472d014ce883db8fe1bfc3ed44631537327bbd978d3db365d6f39cd6f602
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iF0EAREIAAYFAlOnvuMACgkQiIP6VqMIqNfqfAD4xrIBMeSVEe0/0FfL3vfmbgN1
-d5gWTr5n4R+9B83fbgD/Q9OX5JJbHOP5aoYIh48XZ8N4zuYpZTKEgtgu78Y56/c=
-=x0a9
+iF4EAREIAAYFAlPu9+AACgkQiIP6VqMIqNfYNAD9GhprWFH4EPMSAsdcHQABcquA
+vDEwuD6KKKAGqeHOJDIA/3jwdTvuDridE7y8M8PKiTX2loTFizh7QOyqYtM9KRyo
+=O+HZ
 -----END PGP SIGNATURE-----
