@@ -1,0 +1,14 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+DIST ruby-beautify-0.92.2.gem 15872 SHA256 8f547e6be9612d492ae44ddf937b0049ad520147b9b8dbe0384a312919c2157d SHA512 e654fd6595fcc0a191eb1b7d5b6aa0fee0093723e17da6657dd0418e809e1e6d5c38933b07c18b126dac89dabfc215eff6e8a7e94331941b73b24c63fe1756d8 WHIRLPOOL 01dde532574a19558708c6c53edb12487f609354f9c3e14ffebef03642ea193122f95118150fa3c24f4a15aafec79a95cb36b6766909339de5bc661ad95c21af
+EBUILD ruby-beautify-0.92.2.ebuild 921 SHA256 5a36fa23b9dbd03ad3bf72f0d84a87539a19cc8b7b8adcc3521817928b12fb5d SHA512 507838302d8695dfa3690e683b234497e638a40dbaad9be4b4f43033ce22b2a0bac69673a62103fe703ddffe95fa768369f81a92912224186b96d737e89f5d9b WHIRLPOOL 4aaa14452da222c5a6ede0c3df96d62bb4aead69ab4dbc835f3f5eaec969fdda7d0caecb11a29be88989b0e38917033988836e0c94e773971a62edde09e225f9
+MISC ChangeLog 407 SHA256 6b1b426c1be30f00a1e3b55a1bcbbebb50a100c6652c55b209ca82239eb86118 SHA512 e45b38b8411e053a613d468e85824221659702dfeab536c5bf863dd851f45010fab0bfa5a5d87583f2784f6d5f41e98a14fe1721883e5da05172d9ebc6afe1bb WHIRLPOOL d0e4219370dc974c8be012f069927abc77651d6de728901b5336a2f0c5408533843dd0f53e9ad219b23ff542fbf9e15dfcdf110c229e3586a2b1685d5d1774ee
+MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iF4EAREIAAYFAlPvAX8ACgkQiIP6VqMIqNfIkAD/fh8+DcbtGQ4ZRiZnRivXA3cR
+Clc1bTxCvm5mtLWwgXkA/2qmtRE0+ll/Ram1jTkqtWhHNScUrVjlzgA9RGKAHHEl
+=GvWk
+-----END PGP SIGNATURE-----
