@@ -1,0 +1,10 @@
+# ChangeLog for dev-ruby/ruby-beautify
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-beautify/ChangeLog,v 1.1 2014/08/16 07:00:14 graaff Exp $
+
+*ruby-beautify-0.92.2 (16 Aug 2014)
+
+  16 Aug 2014; Hans de Graaff <graaff@gentoo.org> +ruby-beautify-0.92.2.ebuild,
+  +metadata.xml:
+  Initial import. New dependency for dev-ruby/gherkin.
+
