@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/bunny
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/bunny/ChangeLog,v 1.31 2014/06/23 05:45:06 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/bunny/ChangeLog,v 1.32 2014/08/16 06:19:07 graaff Exp $
+
+*bunny-1.4.0 (16 Aug 2014)
+
+  16 Aug 2014; Hans de Graaff <graaff@gentoo.org> +bunny-1.4.0.ebuild:
+  Version bump.
 
 *bunny-1.3.1 (23 Jun 2014)
 
